--- a/info/style/style.css
+++ b/info/style/style.css
@@ -1,16 +1,13 @@
 * {
     box-sizing: border-box;
 }
-* {
-    box-sizing: border-box;
-}
 
 body {
    padding: 0;
    margin: 0;
   
    background-image: url(../img/background.jpg);
-   background-size: 100%;
+   background-size: 100% 100%;
    background-repeat: no-repeat;
 }
 
@@ -33,13 +30,14 @@ body {
 
 .navigation_link {
     display: block;
+    margin-right: 10px;
     height: 90px;
     line-height: 90px;
 
     font-family: Arial;
     font-size: 18px;
     font-style: italic;
-    color: #993322;
+    color: #ffffff;
 
     text-decoration:none;
 }
