--- a/profile/style/style.css
+++ b/profile/style/style.css
@@ -3,7 +3,7 @@ body {
    margin: 0;
   
    background-image: url(../img/background.jpg);
-   background-size: 100%;
+   background-size: 100% 100%;
    background-repeat: no-repeat;
 }
 
@@ -25,6 +25,7 @@ body {
 }
 
 .navigation_link {
+    margin-right: 10px;
     display: block;
     height: 90px;
     line-height: 90px;
